--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,12 +21,8 @@
             android:label="@string/title_activity_main_activity2" >
         </activity>
         <activity
-            android:name=".activity.picutre"
-            android:label="@string/title_activity_picutre" >
-        </activity>
-        <activity
-            android:name=".activity.callendar"
-            android:label="@string/title_activity_callendar" >
+            android:name=".activity.calendar"
+            android:label="@string/title_activity_calendar" >
         </activity>
         <activity
             android:name=".activity.blog"
