Added a working intent to the GalleryActivity to the PictureActivity (with an ImageAdapter class--go here to see how the images are displayed on the screen)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -104,6 +104,10 @@
             android:name=".activity.EventsActivity"
             android:label="@string/title_activity_events" >
         </activity>
+        <activity
+            android:name=".activity.PictureActivity"
+            android:label="@string/title_activity_picture" >
+        </activity>
     </application>
 
 </manifest>
