--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,15 @@
     package="com.example.jeremy.naturephotographynow" >
 
             <!-- could go right next to application -w/o "<!- - "
-                        android:icon="@drawable/icon" android:label="@string/app_name"-->
+                        android:icon="@drawable/icon" android:label="@string/app_name">
+
+                        //this one in <application
+                        android:label="@string/app_name"-->
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:icon="@drawable/cover"
+        android:theme="@style/AppTheme"
+        android:label="@string/app_name">
 
 
         <activity
